# cpp-transcription

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  context7.json  deepgram.toml  fly.toml  vcpkg.json
deploy/: Dockerfile
src/: main.cpp
